adaptive layout made

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="menu__item">
                         <a class="menu__link" href="">Contacts</a>
                     </li>
-                    <li class="menu__item">
+                    <li class="menu__item menu__item-btn">
                         <button class="menu__btn">BUY</button>
                     </li>
                 </ul>
@@ -42,11 +42,11 @@
                     class="title--s">S</span><span class="title--m">M</span><span class="title--ax">AX</span>
             </h1>
             <div class="header__content-images">
-                <!--        <img src="./images/airpods-black.png" alt="">-->
+<!--                        <img src="./images/airpods-black.png" alt="">-->
                 <img src="./images/airpods-blue.png" alt="">
-                <!--        <img src="./images/airpods-green.png" alt="">-->
-                <!--        <img src="./images/airpods-red.png" alt="">-->
-                <!--        <img src="./images/airpods-white.png" alt="">-->
+<!--                        <img src="./images/airpods-green.png" alt="">-->
+<!--                        <img src="./images/airpods-red.png" alt="">-->
+<!--                        <img src="./images/airpods-white.png" alt="">-->
             </div>
         </div>
     </div>
@@ -141,7 +141,7 @@
 <footer class="footer">
 <div class="container">
     <a href="#" class="footer__link">Find a retailer near you</a>
-    <p class="footer__text">Or call <a href="tel:800 207 758"></a>
+    <p class="footer__text">Or call 800 207 758 <a href="tel:800 207 758"></a>
     </p>
     <a class="logo" href="#">
         <img src="images/logo-white.svg" alt="" class="">
