--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                     class="title--s">S</span><span class="title--m">M</span><span class="title--ax">AX</span>
             </h1>
             <div class="header__content-images">
-<!--                        <img src="./images/airpods-black.png" alt="">-->
-                <img src="./images/airpods-blue.png" alt="">
-<!--                        <img src="./images/airpods-green.png" alt="">-->
-<!--                        <img src="./images/airpods-red.png" alt="">-->
-<!--                        <img src="./images/airpods-white.png" alt="">-->
+                <img class="content-item color--black" src="./images/airpods-black.png" alt="">
+                <img class="content-item color--blue content-item__active" src="./images/airpods-blue.png" alt="">
+                <img class="content-item color--green" src="./images/airpods-green.png" alt="">
+                <img class="content-item color--red" src="./images/airpods-red.png" alt="">
+                <img class="content-item color--white" src="./images/airpods-white.png" alt="">
             </div>
         </div>
     </div>
@@ -59,15 +59,15 @@
             <p class="choose-color__text">The perfect balance between the purityof hi‑fi and the magic of AirPods.
                 The ultimate personal audio experience.</p>
             <div class="choose-color__list">
-                <button class="choose__color-btn"><img src="./images/btn-black.png" alt=""></button>
+                <button class="choose__color-btn" data-button="color--black"><img src="./images/btn-black.png" alt=""></button>
 
-                <!--                <button class="choose__color-btn"><img src="./images/btn-blue.png" alt=""></button>-->
+                <button class="choose__color-btn choose__color-btn--active" data-button="color--blue"><img src="./images/btn-blue.png" alt=""></button>
 
-                <button class="choose__color-btn"><img src="./images/btn-green.png" alt=""></button>
+                <button class="choose__color-btn" data-button="color--green"><img src="./images/btn-green.png" alt=""></button>
 
-                <button class="choose__color-btn"><img src="./images/btn-red.png" alt=""></button>
+                <button class="choose__color-btn" data-button="color--red"><img src="./images/btn-red.png" alt=""></button>
 
-                <button class="choose__color-btn"><img src="./images/btn-white.png" alt=""></button>
+                <button class="choose__color-btn" data-button="color--white"><img src="./images/btn-white.png" alt=""></button>
             </div>
         </div>
     </section>
@@ -90,11 +90,11 @@
                     <p>The telescoping arms expand and stay in any position you want, allowing you to maintain fit and
                         isolation.</p>
                 </div>
-                <img class="" src="./images/side-blue.jpg" alt="">
-                <!--                <img class="" src="./images/side-red.jpg" alt="">-->
-                <!--                <img class="" src="./images/side-green.jpg" alt="">-->
-                <!--                <img class="" src="./images/side-white.jpg" alt="">-->
-                <!--                <img class="" src="./images/side-black.jpg" alt="">-->
+                <img class="content-item color--blue content-item__active" src="./images/side-blue.jpg" alt="">
+                <img class="content-item color--red" src="./images/side-red.jpg" alt="">
+                <img class="content-item color--green" src="./images/side-green.jpg" alt="">
+                <img class="content-item color--white" src="./images/side-white.jpg" alt="">
+                <img class="content-item color--black" src="./images/side-black.jpg" alt="">
             </div>
         </div>
     </section>
@@ -103,11 +103,11 @@
             <h2 class="case__title main__title">It even preserves the battery.</h2>
             <p class="case__text">When stored in the sleek and lightweight Smart Case , AirPods Max enter a low-power
                 state to save energy.</p>
-            <!--            <img src="./images/case-black.jpg" alt="">-->
-            <!--            <img src="./images/case-red.jpg" alt="">-->
-            <img src="./images/case-blue.jpg" alt="">
-            <!--            <img src="./images/case-green.jpg" alt="">-->
-            <!--            <img src="./images/case-white.jpg" alt="">-->
+            <img class="content-item color--black" src="./images/case-black.jpg" alt="">
+            <img class="content-item color--red" src="./images/case-red.jpg" alt="">
+            <img class="content-item color--blue content-item__active" src="./images/case-blue.jpg" alt="">
+            <img class="content-item color--green" src="./images/case-green.jpg" alt="">
+            <img class="content-item color--white src="./images/case-white.jpg" alt="">
             <h2 class="energy__title main__title">Stayin' alive, stayin' alive.</h2>
             <p class="energy__num">20</p>
             <p class="energy__text">hours of music, movies and calls with Active Noise Cancellation and Custom Spatial
